--- a/index.html
+++ b/index.html
@@ -43,6 +43,24 @@
         <svg xmlns="http://www.w3.org/2000/svg" class="starsWrapper__star starsWrapper__star--15" viewBox="0 0 512 512"><title>star-glyph</title><path d="M510.37,183.83a21.33,21.33,0,0,0-19.71-13.17H334.79L276,13.84a21.33,21.33,0,0,0-39.95,0L177.21,170.66H21.33A21.33,21.33,0,0,0,6.25,207.08L125.71,326.54,86,485.48A21.34,21.34,0,0,0,119.07,508L256,410.21,392.93,508A21.34,21.34,0,0,0,426,485.48L386.29,326.54,505.75,207.08A21.33,21.33,0,0,0,510.37,183.83Z"/></svg>
 
         <svg xmlns="http://www.w3.org/2000/svg" class="starsWrapper__star starsWrapper__star--16" viewBox="0 0 512 512"><title>star-glyph</title><path d="M510.37,183.83a21.33,21.33,0,0,0-19.71-13.17H334.79L276,13.84a21.33,21.33,0,0,0-39.95,0L177.21,170.66H21.33A21.33,21.33,0,0,0,6.25,207.08L125.71,326.54,86,485.48A21.34,21.34,0,0,0,119.07,508L256,410.21,392.93,508A21.34,21.34,0,0,0,426,485.48L386.29,326.54,505.75,207.08A21.33,21.33,0,0,0,510.37,183.83Z"/></svg>
+
+        <svg xmlns="http://www.w3.org/2000/svg" class="starsWrapper__star starsWrapper__star--17" viewBox="0 0 512 512">
+            <title>star-glyph</title>
+            <path
+                d="M510.37,183.83a21.33,21.33,0,0,0-19.71-13.17H334.79L276,13.84a21.33,21.33,0,0,0-39.95,0L177.21,170.66H21.33A21.33,21.33,0,0,0,6.25,207.08L125.71,326.54,86,485.48A21.34,21.34,0,0,0,119.07,508L256,410.21,392.93,508A21.34,21.34,0,0,0,426,485.48L386.29,326.54,505.75,207.08A21.33,21.33,0,0,0,510.37,183.83Z" />
+        </svg>
+
+        <svg xmlns="http://www.w3.org/2000/svg" class="starsWrapper__star starsWrapper__star--18" viewBox="0 0 512 512">
+            <title>star-glyph</title>
+            <path
+                d="M510.37,183.83a21.33,21.33,0,0,0-19.71-13.17H334.79L276,13.84a21.33,21.33,0,0,0-39.95,0L177.21,170.66H21.33A21.33,21.33,0,0,0,6.25,207.08L125.71,326.54,86,485.48A21.34,21.34,0,0,0,119.07,508L256,410.21,392.93,508A21.34,21.34,0,0,0,426,485.48L386.29,326.54,505.75,207.08A21.33,21.33,0,0,0,510.37,183.83Z" />
+        </svg>
+
+        <svg xmlns="http://www.w3.org/2000/svg" class="starsWrapper__star starsWrapper__star--19" viewBox="0 0 512 512">
+            <title>star-glyph</title>
+            <path
+                d="M510.37,183.83a21.33,21.33,0,0,0-19.71-13.17H334.79L276,13.84a21.33,21.33,0,0,0-39.95,0L177.21,170.66H21.33A21.33,21.33,0,0,0,6.25,207.08L125.71,326.54,86,485.48A21.34,21.34,0,0,0,119.07,508L256,410.21,392.93,508A21.34,21.34,0,0,0,426,485.48L386.29,326.54,505.75,207.08A21.33,21.33,0,0,0,510.37,183.83Z" />
+        </svg>
     </div>
     <script defer src="./index.js"></script>
 </body>
